# rag-service

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: chunking-strategy.md
scripts/: setup_collection.py
src/: __init__.py  config.py
src/chunking/: __init__.py  base.py  fixed.py  semantic.py
src/embedding/: __init__.py  base.py  batch_runner.py  local_embedder.py  openai_embedder.py  retry.py
src/loaders/: __init__.py  base.py  docx.py  html.py  markdown.py  pdf.py  registry.py
src/pipeline/: __init__.py  cleaning_pipeline.py  run.py
src/storage/: __init__.py  dedup.py  qdrant_client.py
src/utils/: cleaning.py  language.py
tests/: conftest.py  test_smoke.py
tests/chunking/: test_chunkers.py
tests/embedding/: test_batch_runner.py  test_local_embedder.py  test_openai_embedder.py
tests/loaders/: test_loaders.py
tests/loaders/fixtures/: sample.docx  sample.html  sample.md
tests/pipeline/: test_cleaning_pipeline.py
tests/storage/: test_dedup.py  test_qdrant_client.py
tests/utils/: test_cleaning.py
