[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-api"
version = "0.1.0"
description = "Multi-tenant RAG API service ingestion pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
loaders = [
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "pymupdf>=1.23",
  "python-docx>=1.1",
]
chunking = [
  "spacy>=3.7",
  "tiktoken>=0.7",
]
embedding = [
  "openai>=1.30",
  "sentence-transformers>=3.0",
  "tenacity>=8.2",
]
storage = [
  "alembic>=1.13",
  "asyncpg>=0.29",
  "qdrant-client[fastembed]>=1.9",
  "sqlalchemy[asyncio]>=2.0",
]
pipeline = [
  "click>=8.1",
  "langdetect>=1.0",
  "prefect>=3.0",
]
dev = [
  "black>=24.0",
  "httpx>=0.27",
  "isort>=5.13",
  "mypy>=1.10",
  "nox>=2024.4.15",
  "pre-commit>=3.7",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-postgresql>=6.0",
  "ruff>=0.4",
]
all = [
  "alembic>=1.13",
  "asyncpg>=0.29",
  "beautifulsoup4>=4.12",
  "black>=24.0",
  "click>=8.1",
  "httpx>=0.27",
  "isort>=5.13",
  "langdetect>=1.0",
  "lxml>=5.0",
  "mypy>=1.10",
  "nox>=2024.4.15",
  "openai>=1.30",
  "pre-commit>=3.7",
  "prefect>=3.0",
  "pymupdf>=1.23",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-postgresql>=6.0",
  "python-docx>=1.1",
  "qdrant-client[fastembed]>=1.9",
  "ruff>=0.4",
  "sentence-transformers>=3.0",
  "spacy>=3.7",
  "sqlalchemy[asyncio]>=2.0",
  "tenacity>=8.2",
  "tiktoken>=0.7",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: marks tests as integration tests (deselect with '-m not integration')",
  "slow: marks tests as slow",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
